crates/erlang_service/fixtures/latin1_binary.erl
-module(latin1_binary).
-export([f/0]).

f() ->
    <<"Motörhead">>.
